# aws-mcp-instrumentor

./: README.md  client.py  fix-xray-permissions.json  logger_setup.py  mcpserver.py  otel-collector-config.yaml  pyproject.toml  requirements.txt  test_client_wrapper.py
mcp_server_appsignals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: mcpinstrumentor.py
src/mcp_server_appsignals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mcpserver_appsignals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
