[project]
name = "mcp-server-appsignals"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.38.26",
  "httpx>=0.28.1",
  "mcp[cli]>=1.9.2",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-exporter-otlp>=1.22.0",
  "opentelemetry-instrumentation>=0.44b0",
  "fastmcp",
  "opentelemetry-exporter-otlp-proto-grpc"
]

[project.scripts]
mcp-server-appsignals = "mcpserver:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcpserver"]

[tool.setuptools.package-dir]
"" = "."
